--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "formidable": "^1.2.1",
-    "mongodb": "^2.2.35",
+    "mongodb": "^2.2.35"
   },
   "engines": {
     "node": "8.11.2"
