--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.16.3",
     "fs": "0.0.1-security",
     "gridfs-stream": "^1.1.1",
+    "https": "^1.0.0",
     "mongodb": "^2.2.33",
     "morgan": "^1.9.0",
     "multer": "^1.3.1"
